[project]
name = "multimodal-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "clip",
    "gradio>=5.47.1",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.8",
    "ollama>=0.6.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "pymilvus[milvus-lite]>=2.6.2",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
